Shrink bug title size a little
Was a bit too big.

--- a/bzkanban.css
+++ b/bzkanban.css
@@ -59,6 +59,7 @@ body {
     margin: 5px;
     box-shadow: 0px 1px 0px lightgrey;
     cursor: pointer;
+    font-size: 90%;
 }
 .card:hover {
     background-color: ghostwhite;
